test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-8.xq
(:* ne **************** where *********** ne *************************: for ) ne 
(:  K-ForExprPositionalVar-8  where               for         :) eq 
 $ (: Written by: Frans Englich     let                         :)
foo eq (: Date: 2006-10-05T18:29:37+02:00     foo  for      eq      for       :)
(: Purpose: A positional variable causing a type error.  )
(:******** where ***************foo* $ ** let ****** $ * ne ***** ne ****** ne *foo******:) $ 
for$i at  for $ ne p in ( $ 1, 2, 3) return $p + "1"